--- a/web/register.css
+++ b/web/register.css
@@ -16,14 +16,26 @@ body{
 }
 
 .container {
-    width: 75vw;
-    padding-top: 1%;
+    width: 50vw;
+    padding-top: 2%;
     margin: 2% auto;
     padding-bottom: 1%;
     background-color: white;
     border-radius: 15px;
-    padding: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 2%;
     clear: both;
+}
+
+h2 {
+    font-family: 'Rouge Script', cursive;
+}
+
+.signin {
+    margin-top: -2%;
+    background-color: #f1f1f1;
+    text-align: center;
 }
 
 
@@ -31,133 +43,33 @@ body{
     text-align: center;
 }
 
-.grow:hover
-{
-    -webkit-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    transform: scale(1.2);
+#email {
+    font-size: 110%;
 }
 
-#cf {
-    position:relative;
-    height:400px;
-    width:600px;
-    margin:0 auto;
-    float: right;
+
+img {
+    width: 80%;
 }
 
-#cf img {
-    position:absolute;
-    left:0;
-    -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    transition: opacity 1s ease-in-out;
-    width: 100%;
-    border-radius: 2%;
-    height: 100%;
-
-}
-
-@keyframes cfFadeInOut {
-    0% {
-        opacity:1;
-    }
-    45% {
-        opacity:1;
-    }
-    55% {
-        opacity:0;
-    }
-    100% {
-        opacity:0;
-    }
-}
-
-#cf img.top {
-    animation-name: cfFadeInOut;
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-duration: 5s;
-    animation-direction: alternate;
-}
-
-h1 {
-    color: black;
-    font-size: 80px;
+#para {
+    font-size: 140%;
     font-family: 'Rouge Script', cursive;
-    font-weight: normal;
-    text-shadow: 1px 1px 2px #082b34;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    padding: 40px 20px 20px 20px;
 }
 
-h3 {
-    color: black;
-    font-family: 'Rouge Script', cursive;
-    font-weight: normal;
-    line-height: 40px;
-    margin-bottom: 70px;
-}
-
-
-img{
-    width: 100%;
-}
-
-.page {
-    padding: 2em;
-    background: #cecece;
-    max-width: 1100px;
-}
 
 .archive {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    grid-gap: 1em;
+    width: 100%;
 }
 
 .article {
-    padding: 1em;
-    background: #fff;
-    box-shadow:
-            0 5px 10px rgba(0, 0, 0, 0.1),
-            0 20px 20px rgba(0, 0, 0, 0.05);
-}
-
-.par {
-    font-size: 20px;
-    text-align: center;
-    margin-top: 10px;
-}
-
-.margin {
-    margin-bottom: 100px;
-}
-
-.price {
-    color: grey;
-    font-size: 22px;
-    text-align: center;
-}
-
-.cart {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
     width: 100%;
-    font-size: 18px;
+    background: #fff;
+    display: inline-flex;
+
 }
-
-.cart:hover {
-    opacity: 0.7;
-}
-
-
 @media screen and (max-width: 1300px){
     .container {
         margin-top: 8%;
@@ -178,6 +90,10 @@ img{
         font-size: 5vw;
         text-align: center;
         margin-bottom: 30px;
+    }
+    #para {
+        padding: 50px 15px 15px 15px;
+        font-size: 200%;
     }
 
 }
@@ -203,6 +119,13 @@ img{
         text-align: center;
         margin-bottom: 30px;
     }
+    #email {
+        font-size: 95%;
+    }
+    #para {
+        padding: 30px 15px 15px 15px;
+        font-size: 130%;
+    }
 
 }
 
@@ -226,6 +149,12 @@ img{
     }
     .margin {
         margin-bottom: 0px;
+    }
+    #email {
+        font-size: 90%;
+    }
+    #para {
+        padding: 30px 15px 15px 15px;
     }
 }
 
@@ -253,11 +182,18 @@ img{
     .margin {
         margin-bottom: 0px;
     }
+    #email {
+        font-size: 85%;
+    }
+    #para {
+        padding: 35px 15px 15px 15px;
+        font-size: 110%;
+    }
 }
 
 @media screen and (max-width: 450px){
     .container {
-        margin-top: 15%;
+        margin-top: 17%;
     }
     #cf {
         width: 100%;
@@ -277,6 +213,12 @@ img{
     }
     .margin{
         margin-bottom: 0px;
+    }
+    #email {
+        font-size: 80%;
+    }
+    #para {
+        padding: 17px 5px 5px 5px;
     }
 }
 
@@ -324,19 +266,20 @@ hr {
     opacity: 1;
 }
 
-a {
-    color: dodgerblue;
-}
-
-.signin {
-    margin-top: -2%;
-    background-color: #f1f1f1;
-    text-align: center;
-}
 
 .button{
+    background-color: #101010;
+    color: white;
+    padding: 10px 10px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
     margin-bottom: 1%;
-    width:35%;
+    width:30%;
+}
+
+.button:hover {
+    opacity: 1;
 }
 
 @media screen and (max-width: 600px) {
