--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -114,12 +114,13 @@ img{
 .archive {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    grid-gap: 1em;
+    grid-gap: 2em;
 }
 
 .article {
     padding: 1em;
     background: #fff;
+    display: grid;
     box-shadow:
             0 5px 10px rgba(0, 0, 0, 0.1),
             0 20px 20px rgba(0, 0, 0, 0.05);
